--- a/.github/workflows/dl.yaml
+++ b/.github/workflows/dl.yaml
@@ -7,6 +7,8 @@ on:
 jobs:
   download:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Setup python
         uses: actions/setup-python@v5
