--- a/.github/workflows/dl.yaml
+++ b/.github/workflows/dl.yaml
@@ -16,7 +16,7 @@ jobs:
           python-version: 3.12
       - name: Install requirements
         run: |
-          pip install beautifulsoup4
+          pip install beautifulsoup4 requests
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Run script
