--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,8 @@ sortedcontainers==2.4.0
     # via trio
 soupsieve==2.8
     # via beautifulsoup4
+tqdm==4.67.1
+    # via hwz-data (pyproject.toml)
 trio==0.30.0
     # via
     #   selenium
