--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,13 @@ description = "Python-based web scraping project that automatically downloads pr
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "beautifulsoup4",
-    "requests",
-    "selenium",
-    "python-dotenv",
-    "pypdf2",
-    "pytesseract",
-    "pdf2image",
-    "pillow",
-    "tqdm>=4.67.1`",
+    "beautifulsoup4>=4.13.5",
+    "pdf2image>=1.17.0",
+    "pillow>=11.3.0",
+    "pypdf2>=3.0.1",
+    "pytesseract>=0.3.13",
+    "python-dotenv>=1.1.1",
+    "requests>=2.32.5",
+    "selenium>=4.35.0",
+    "tqdm>=4.67.1",
 ]
